unpackaged/main/default/objects/MTA__c/MTA__c.object-meta.xml
<CustomObject>
    <label>MTA</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>MTA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>