unpackaged/main/default/objects/MTA__c/fields/Additional_Return_Premium__c.field-meta.xml
<CustomField>
    <fullName>Additional_Return_Premium__c</fullName>
    <label>Additional/Return Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>