unpackaged/main/default/objects/MTA__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>