unpackaged/main/default/objects/MTA__c/fields/Cover_Level__c.field-meta.xml
<CustomField>
    <fullName>Cover_Level__c</fullName>
    <label>Cover Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>