unpackaged/main/default/objects/MTA__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>MTAs</relationshipLabel>
    <relationshipName>MTAs</relationshipName>
    <type>Lookup</type>
</CustomField>