unpackaged/main/default/objects/MTA__c/fields/Make_Year__c.field-meta.xml
<CustomField>
    <fullName>Make_Year__c</fullName>
    <label>Make Year</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>