unpackaged/main/default/objects/MTA__c/fields/MTA_Premium__c.field-meta.xml
<CustomField>
    <fullName>MTA_Premium__c</fullName>
    <label>MTA Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>