unpackaged/main/default/objects/MTA__c/fields/Original_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Effective_Date__c</fullName>
    <label>Original Effective Date</label>
    <type>DateTime</type>
</CustomField>