unpackaged/main/default/objects/MTA__c/fields/Package_type__c.field-meta.xml
<CustomField>
    <fullName>Package_type__c</fullName>
    <label>Package type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>