unpackaged/main/default/objects/MTA__c/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <label>PostCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>